Fixed horizontal scroll

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -2,12 +2,12 @@
   position: relative;
   box-sizing: border-box;
 
-  height: 175vh;
+  height: 1400px;
   padding-top: 180px;
   padding-bottom: 80px;
 
   @include on-small-desktop {
-    height: 105vh;
+    height: 870px;
   }
 
   z-index: 1;
