--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,6 +32,7 @@ body {
 
   color: #FFF;
   background: $background-color;
+  overflow: hidden scroll;
 }
 
 h1, h2, h3, h4, p {
